reuse listClusters
